syntax = "proto3";

package remote;

option go_package = "github.com/takutakahashi/agent-connect/gen/remote";

service RemoteAgentService {
  rpc ExecuteTask(ExecuteTaskRequest) returns (ExecuteTaskResponse) {}
  rpc Ping(PingRequest) returns (PingResponse) {}
  
}

message ProviderInfo {
  string model_name = 1;
  string api_key = 2;
  string provider_name = 3;
  map<string, string> env = 4;
}

message GitHubInfo {
  string api_token = 1;
  string api_url = 2;
  string repo = 3;
  string full_repo_url = 4;
  int32 pr_number = 5;
  int32 issue_number = 6;
  string branch_name = 7;
}

message ExecuteTaskRequest {
  string session_id = 1;
  ProviderInfo provider = 2;
  GitHubInfo github = 3;
  string instruction = 4;
}

message ExecuteTaskResponse {
  string session_id = 1;
  string stdout = 2;
  string stderr = 3;
  bool success = 4;
}

message PingRequest {
}

message PingResponse {
  string status = 1;
}